final changes for thesis defense

--- a/minimdo/balloon/balloon_thesis.ipynb
+++ b/minimdo/balloon/balloon_thesis.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "c76e502f-e0e9-4ee3-b59d-836f459eeacc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-13T23:44:44.588558Z",
-     "iopub.status.busy": "2022-07-13T23:44:44.588558Z",
-     "iopub.status.idle": "2022-07-13T23:44:44.606802Z",
-     "shell.execute_reply": "2022-07-13T23:44:44.606645Z",
-     "shell.execute_reply.started": "2022-07-13T23:44:44.588558Z"
+     "iopub.execute_input": "2022-07-29T01:14:27.901238Z",
+     "iopub.status.busy": "2022-07-29T01:14:27.901238Z",
+     "iopub.status.idle": "2022-07-29T01:14:30.401801Z",
+     "shell.execute_reply": "2022-07-29T01:14:30.401287Z",
+     "shell.execute_reply.started": "2022-07-29T01:14:27.901238Z"
     },
     "tags": []
    },
@@ -68,11 +68,11 @@
    "id": "1a59d5d6-05f6-49af-a0e5-c8e89b5120f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-13T23:41:08.602245Z",
-     "iopub.status.busy": "2022-07-13T23:41:08.602245Z",
-     "iopub.status.idle": "2022-07-13T23:41:08.619052Z",
-     "shell.execute_reply": "2022-07-13T23:41:08.618044Z",
-     "shell.execute_reply.started": "2022-07-13T23:41:08.602245Z"
+     "iopub.execute_input": "2022-07-29T01:14:30.403808Z",
+     "iopub.status.busy": "2022-07-29T01:14:30.402814Z",
+     "iopub.status.idle": "2022-07-29T01:14:30.417779Z",
+     "shell.execute_reply": "2022-07-29T01:14:30.416869Z",
+     "shell.execute_reply.started": "2022-07-29T01:14:30.403808Z"
     },
     "tags": []
    },
@@ -101,11 +101,11 @@
    "id": "d7be3196-1c06-4ba4-ba84-b3659449a580",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-13T23:41:08.621056Z",
-     "iopub.status.busy": "2022-07-13T23:41:08.621056Z",
-     "iopub.status.idle": "2022-07-13T23:41:08.991518Z",
-     "shell.execute_reply": "2022-07-13T23:41:08.990654Z",
-     "shell.execute_reply.started": "2022-07-13T23:41:08.621056Z"
+     "iopub.execute_input": "2022-07-29T01:14:30.418776Z",
+     "iopub.status.busy": "2022-07-29T01:14:30.417779Z",
+     "iopub.status.idle": "2022-07-29T01:14:30.857778Z",
+     "shell.execute_reply": "2022-07-29T01:14:30.856672Z",
+     "shell.execute_reply.started": "2022-07-29T01:14:30.418776Z"
     },
     "tags": []
    },
@@ -141,11 +141,11 @@
    "id": "601a193c-5b10-4b73-ad55-be10c7e44599",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-13T23:41:08.992517Z",
-     "iopub.status.busy": "2022-07-13T23:41:08.992517Z",
-     "iopub.status.idle": "2022-07-13T23:41:09.116279Z",
-     "shell.execute_reply": "2022-07-13T23:41:09.116279Z",
-     "shell.execute_reply.started": "2022-07-13T23:41:08.992517Z"
+     "iopub.execute_input": "2022-07-29T01:14:30.858699Z",
+     "iopub.status.busy": "2022-07-29T01:14:30.858699Z",
+     "iopub.status.idle": "2022-07-29T01:14:31.000315Z",
+     "shell.execute_reply": "2022-07-29T01:14:30.999312Z",
+     "shell.execute_reply.started": "2022-07-29T01:14:30.858699Z"
     },
     "tags": []
    },
@@ -175,11 +175,11 @@
    "id": "6474cb28-7f49-496e-88a8-16024c059e97",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-13T23:41:09.118228Z",
-     "iopub.status.busy": "2022-07-13T23:41:09.117321Z",
-     "iopub.status.idle": "2022-07-13T23:41:09.132436Z",
-     "shell.execute_reply": "2022-07-13T23:41:09.132234Z",
-     "shell.execute_reply.started": "2022-07-13T23:41:09.118228Z"
+     "iopub.execute_input": "2022-07-29T01:14:31.001313Z",
+     "iopub.status.busy": "2022-07-29T01:14:31.001313Z",
+     "iopub.status.idle": "2022-07-29T01:14:31.015097Z",
+     "shell.execute_reply": "2022-07-29T01:14:31.014596Z",
+     "shell.execute_reply.started": "2022-07-29T01:14:31.001313Z"
     },
     "tags": []
    },
@@ -194,11 +194,11 @@
    "id": "f33fb5ba-ba7e-4f62-8ce4-5d6c501b0f78",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-13T23:41:09.133576Z",
-     "iopub.status.busy": "2022-07-13T23:41:09.133576Z",
-     "iopub.status.idle": "2022-07-13T23:41:09.178961Z",
-     "shell.execute_reply": "2022-07-13T23:41:09.178800Z",
-     "shell.execute_reply.started": "2022-07-13T23:41:09.133576Z"
+     "iopub.execute_input": "2022-07-29T01:14:31.016117Z",
+     "iopub.status.busy": "2022-07-29T01:14:31.016117Z",
+     "iopub.status.idle": "2022-07-29T01:14:31.060713Z",
+     "shell.execute_reply": "2022-07-29T01:14:31.060713Z",
+     "shell.execute_reply.started": "2022-07-29T01:14:31.016117Z"
     },
     "tags": []
    },
@@ -235,11 +235,11 @@
    "id": "18d3d3ae-2541-496e-ad25-2ebbcb18a837",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-13T23:41:09.180027Z",
-     "iopub.status.busy": "2022-07-13T23:41:09.180027Z",
-     "iopub.status.idle": "2022-07-13T23:41:09.427157Z",
-     "shell.execute_reply": "2022-07-13T23:41:09.427065Z",
-     "shell.execute_reply.started": "2022-07-13T23:41:09.180027Z"
+     "iopub.execute_input": "2022-07-29T01:14:31.062714Z",
+     "iopub.status.busy": "2022-07-29T01:14:31.061716Z",
+     "iopub.status.idle": "2022-07-29T01:14:31.325702Z",
+     "shell.execute_reply": "2022-07-29T01:14:31.325417Z",
+     "shell.execute_reply.started": "2022-07-29T01:14:31.062714Z"
     },
     "tags": []
    },
@@ -271,11 +271,11 @@
    "id": "ae21b598-c6ba-4fcc-a996-e34fcc2d2c9a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-13T23:41:09.429180Z",
-     "iopub.status.busy": "2022-07-13T23:41:09.429180Z",
-     "iopub.status.idle": "2022-07-13T23:41:09.473498Z",
-     "shell.execute_reply": "2022-07-13T23:41:09.473498Z",
-     "shell.execute_reply.started": "2022-07-13T23:41:09.429180Z"
+     "iopub.execute_input": "2022-07-29T01:14:31.327721Z",
+     "iopub.status.busy": "2022-07-29T01:14:31.327721Z",
+     "iopub.status.idle": "2022-07-29T01:14:31.388447Z",
+     "shell.execute_reply": "2022-07-29T01:14:31.387536Z",
+     "shell.execute_reply.started": "2022-07-29T01:14:31.327721Z"
     },
     "tags": []
    },
@@ -318,11 +318,11 @@
    "id": "f7bd1c11-2d2c-4277-bac7-34389f6c9e1d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-13T23:41:09.475534Z",
-     "iopub.status.busy": "2022-07-13T23:41:09.474529Z",
-     "iopub.status.idle": "2022-07-13T23:41:09.489537Z",
-     "shell.execute_reply": "2022-07-13T23:41:09.488621Z",
-     "shell.execute_reply.started": "2022-07-13T23:41:09.475534Z"
+     "iopub.execute_input": "2022-07-29T01:14:31.549831Z",
+     "iopub.status.busy": "2022-07-29T01:14:31.548831Z",
+     "iopub.status.idle": "2022-07-29T01:14:31.559730Z",
+     "shell.execute_reply": "2022-07-29T01:14:31.559730Z",
+     "shell.execute_reply.started": "2022-07-29T01:14:31.549831Z"
     },
     "tags": []
    },
@@ -331,6 +331,83 @@
     "nodetyperepr = {VAR: '{}', COMP: 'f_{{{}}}', SOLVER: '{}'}\n",
     "edges, tree = model.generate_formulation()\n",
     "edges_nopar = edges_no_param(model, edges) # filter out variables that are parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "845f48f7-45af-45a1-826f-292c14ba5e24",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-29T01:16:00.753453Z",
+     "iopub.status.busy": "2022-07-29T01:16:00.753453Z",
+     "iopub.status.idle": "2022-07-29T01:16:00.772074Z",
+     "shell.execute_reply": "2022-07-29T01:16:00.771073Z",
+     "shell.execute_reply.started": "2022-07-29T01:16:00.753453Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(incidence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7782adea-9def-4a39-9b30-907a270d7b3d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-29T01:14:36.546951Z",
+     "iopub.status.busy": "2022-07-29T01:14:36.546951Z",
+     "iopub.status.idle": "2022-07-29T01:14:36.557846Z",
+     "shell.execute_reply": "2022-07-29T01:14:36.557846Z",
+     "shell.execute_reply.started": "2022-07-29T01:14:36.546951Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "incidence,_,_ = invert_edges(edges[0], edges[1], None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d51508f7-77ba-41f1-ba25-33adb2362130",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-29T01:14:50.053512Z",
+     "iopub.status.busy": "2022-07-29T01:14:50.052564Z",
+     "iopub.status.idle": "2022-07-29T01:14:50.057836Z",
+     "shell.execute_reply": "2022-07-29T01:14:50.057836Z",
+     "shell.execute_reply.started": "2022-07-29T01:14:50.053512Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.217391304347826"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean([len(val) for val in incidence.values()])"
    ]
   },
   {
@@ -343,15 +420,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d9387a83-298d-4bdf-8bc5-69a2146ee3fa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-13T23:41:09.490570Z",
-     "iopub.status.busy": "2022-07-13T23:41:09.490570Z",
-     "iopub.status.idle": "2022-07-13T23:41:09.505692Z",
-     "shell.execute_reply": "2022-07-13T23:41:09.504529Z",
-     "shell.execute_reply.started": "2022-07-13T23:41:09.490570Z"
+     "iopub.execute_input": "2022-07-29T01:14:31.945674Z",
+     "iopub.status.busy": "2022-07-29T01:14:31.945674Z",
+     "iopub.status.idle": "2022-07-29T01:14:31.963845Z",
+     "shell.execute_reply": "2022-07-29T01:14:31.962832Z",
+     "shell.execute_reply.started": "2022-07-29T01:14:31.945674Z"
     },
     "tags": []
    },
