IPOPT experiments additional results

--- a/minimdo/pearl/pearl_opt.ipynb
+++ b/minimdo/pearl/pearl_opt.ipynb
@@ -48,7 +48,7 @@
    },
    "outputs": [],
    "source": [
-    "run_optimal_structure = False"
+    "run_optimal_structure = True"
    ]
   },
   {
@@ -1564,9 +1564,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:minimdo]",
+   "display_name": "Python 3.9.12 ('pyoptsparse': conda)",
    "language": "python",
-   "name": "conda-env-minimdo-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
