--- a/minimdo/pearl/pearl_opt.ipynb
+++ b/minimdo/pearl/pearl_opt.ipynb
@@ -1564,7 +1564,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('pyoptsparse': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1578,7 +1578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   },
   "vscode": {
    "interpreter": {
