added more tutorial elements and updated cases

--- a/minimdo/examples/xdsm.ipynb
+++ b/minimdo/examples/xdsm.ipynb
@@ -2,6 +2,182 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "56cb9607-6314-4e3f-ba5e-4bd5bd6f8a52",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-13T20:54:01.825679Z",
+     "iopub.status.busy": "2022-08-13T20:54:01.824672Z",
+     "iopub.status.idle": "2022-08-13T20:54:01.916981Z",
+     "shell.execute_reply": "2022-08-13T20:54:01.916120Z",
+     "shell.execute_reply.started": "2022-08-13T20:54:01.825679Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from pyxdsm.XDSM import XDSM, OPT, SOLVER, FUNC, LEFT, RIGHT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18702603-0117-40f8-829e-73b4ce08bcee",
+   "metadata": {},
+   "source": [
+    "## Spacecraft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1786042a-74ee-4dec-84bb-3df1ebf3c04d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-13T21:27:15.183061Z",
+     "iopub.status.busy": "2022-08-13T21:27:15.182062Z",
+     "iopub.status.idle": "2022-08-13T21:27:16.672044Z",
+     "shell.execute_reply": "2022-08-13T21:27:16.671020Z",
+     "shell.execute_reply.started": "2022-08-13T21:27:15.182062Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "x = XDSM(use_sfmath=False)\n",
+    "#x.add_system(\"A0\", FUNC, r\"\\text{Input}\")\n",
+    "x.add_system(\"A1\", FUNC, r\"\\text{Mission design}\")\n",
+    "x.add_system(\"A2\", FUNC, r\"\\text{Power}\")\n",
+    "x.add_system(\"A3\", FUNC, r\"\\text{Payload}\")\n",
+    "x.add_system(\"A4\", FUNC, r\"\\text{Comms}\")\n",
+    "x.add_system(\"A5\", FUNC, r\"\\text{Mass}\")\n",
+    "x.add_system(\"A6\", FUNC, r\"\\text{Structure}\")\n",
+    "x.add_system(\"A7\", FUNC, r\"\\text{Propulsion}\")\n",
+    "#x.add_system(\"A8\", FUNC, r\"\\text{Output}\")\n",
+    "\n",
+    "x.add_input(\"A1\", \"h\")\n",
+    "x.add_input(\"A2\", \"A\")\n",
+    "x.add_input(\"A3\", r\"X_r\")\n",
+    "x.add_input(\"A5\", r\"m_\\text{pr}\")\n",
+    "x.add_input(\"A7\", r\"m_\\text{pr}\")\n",
+    "\n",
+    "x.connect(\"A1\", \"A2\", \"d, T\")\n",
+    "x.connect(\"A1\", \"A4\", \"r, T,g\")\n",
+    "x.connect(\"A2\", \"A5\", \"m_A, m_b\")\n",
+    "x.connect(\"A3\", \"A4\", \"D\")\n",
+    "x.connect(\"A3\", \"A5\", \"m_p\")\n",
+    "x.connect(\"A4\", \"A5\", \"m_T\")\n",
+    "x.connect(\"A5\", \"A6\", \"m_t\")\n",
+    "x.connect(\"A5\", \"A7\", \"m_t\")\n",
+    "x.connect(\"A6\", \"A5\", \"m_s\")\n",
+    "\n",
+    "x.add_output(\"A4\", \"E_b/N_o\", side=RIGHT)\n",
+    "x.add_output(\"A7\", \"L_t\", side=RIGHT)\n",
+    "\n",
+    "x.write(\"spacecraft_xdsm\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4066ec0c-dcbb-4902-b58c-d4dac732c802",
+   "metadata": {},
+   "source": [
+    "## Aircraft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ced9a99f-5014-47df-af6d-79ec33c571ac",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-14T17:33:02.090891Z",
+     "iopub.status.busy": "2022-08-14T17:33:02.089898Z",
+     "iopub.status.idle": "2022-08-14T17:33:03.684082Z",
+     "shell.execute_reply": "2022-08-14T17:33:03.683535Z",
+     "shell.execute_reply.started": "2022-08-14T17:33:02.090891Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "x = XDSM(use_sfmath=False)\n",
+    "x.add_system(\"A3\", FUNC, r\"\\text{Apogee}\")\n",
+    "x.add_system(\"A4\", FUNC, r\"\\text{Materials}\")\n",
+    "x.add_system(\"A5\", FUNC, r\"\\text{Mass}\")\n",
+    "x.add_system(\"A1\", FUNC, r\"\\text{Aerodynamics}\")\n",
+    "x.add_system(\"A2\", FUNC, r\"\\text{Geometry}\")\n",
+    "\n",
+    "x.add_input(\"A3\", \"z\")\n",
+    "x.add_input(\"A1\", \"v\")\n",
+    "\n",
+    "x.connect(\"A1\", \"A2\", \"A_0\")\n",
+    "x.connect(\"A2\", \"A1\", \"V_0\")\n",
+    "x.connect(\"A2\", \"A5\", \"m_{r0}\")\n",
+    "x.connect(\"A3\", \"A4\", \"V_z\")\n",
+    "x.connect(\"A4\", \"A5\", \"m_b\")\n",
+    "x.connect(\"A5\", \"A3\", \"m_t\")\n",
+    "x.connect(\"A5\", \"A1\", \"m_t\")\n",
+    "\n",
+    "x.add_output(\"A5\", \"m_t\", side=RIGHT)\n",
+    "\n",
+    "x.write(\"aircraft_xdsm\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3b19d77-1488-41f5-934c-5c3eb80cd0c4",
+   "metadata": {},
+   "source": [
+    "## Marine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ee6b60d2-8354-4674-8942-55790a809768",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-14T17:32:10.900332Z",
+     "iopub.status.busy": "2022-08-14T17:32:10.899828Z",
+     "iopub.status.idle": "2022-08-14T17:32:12.667070Z",
+     "shell.execute_reply": "2022-08-14T17:32:12.666487Z",
+     "shell.execute_reply.started": "2022-08-14T17:32:10.900332Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "x = XDSM(use_sfmath=False)\n",
+    "x.add_system(\"A1\", FUNC, r\"\\text{Geometry}\")\n",
+    "x.add_system(\"A2\", FUNC, r\"\\text{Hydrodynamics}\")\n",
+    "x.add_system(\"A3\", FUNC, r\"\\text{Mass}\")\n",
+    "x.add_system(\"A4\", FUNC, r\"\\text{Propulsion}\")\n",
+    "x.add_system(\"A5\", FUNC, r\"\\text{Power}\")\n",
+    "x.add_system(\"A6\", FUNC, r\"\\text{Communications}\")\n",
+    "\n",
+    "x.add_input(\"A2\", \"h_f, t_f, t_s, D_d, D_s\")\n",
+    "x.add_input(\"A3\", r\"t_f, t_s, D_d, D_s, \\rho, \\rho_h\")\n",
+    "x.add_input(\"A4\", \"h_f, t_s, D_d, D_s, v\")\n",
+    "x.add_input(\"A5\", r\"R, E_b/N_o\")\n",
+    "\n",
+    "x.connect(\"A1\", \"A2\", \"d, D_f\")\n",
+    "x.connect(\"A1\", \"A6\", \"d\")\n",
+    "x.connect(\"A1\", \"A3\", \"D_f\")\n",
+    "x.connect(\"A2\", \"A3\", \"F_W\")\n",
+    "x.connect(\"A3\", \"A2\", \"t_d, m_{platform}\")\n",
+    "x.connect(\"A2\", \"A4\", \"D\")\n",
+    "x.connect(\"A4\", \"A5\", \"P_p\")\n",
+    "x.connect(\"A6\", \"A5\", \"P_c\")\n",
+    "x.connect(\"A6\", \"A1\", \"A_s\")\n",
+    "\n",
+    "x.add_output(\"A2\", \"G_M\", side=RIGHT)\n",
+    "x.add_output(\"A3\", \"m_{platform}\", side=RIGHT)\n",
+    "\n",
+    "x.write(\"marine_xdsm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "id": "d9ea8f7e-0f83-40d0-8c37-1123b71dd71c",
    "metadata": {
