--- a/minimdo/polynomialsjl.ipynb
+++ b/minimdo/polynomialsjl.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 2,
    "id": "334adbd7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-12T19:39:51.395000-04:00",
-     "iopub.status.busy": "2022-07-12T19:39:51.395000-04:00",
-     "iopub.status.idle": "2022-07-12T19:39:52.218000-04:00",
-     "shell.execute_reply": "2022-07-12T19:39:52.218000-04:00"
+     "iopub.execute_input": "2022-08-16T11:36:26.365000-04:00",
+     "iopub.status.busy": "2022-08-16T11:36:26.365000-04:00",
+     "iopub.status.idle": "2022-08-16T11:36:41.938000-04:00",
+     "shell.execute_reply": "2022-08-16T11:36:41.891000-04:00"
     },
     "tags": []
    },
@@ -451,14 +451,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 54,
    "id": "ad566a33",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-12T20:44:56.422000-04:00",
-     "iopub.status.busy": "2022-07-12T20:44:56.422000-04:00",
-     "iopub.status.idle": "2022-07-12T20:44:56.435000-04:00",
-     "shell.execute_reply": "2022-07-12T20:44:56.435000-04:00"
+     "iopub.execute_input": "2022-08-16T13:21:51.941000-04:00",
+     "iopub.status.busy": "2022-08-16T13:21:51.928000-04:00",
+     "iopub.status.idle": "2022-08-16T13:21:52.032000-04:00",
+     "shell.execute_reply": "2022-08-16T13:21:52.031000-04:00"
     },
     "tags": []
    },
@@ -477,20 +477,20 @@
     "h8=0.8*x_0*x_5 - 0.3*x_12*x_2 - 0.7*x_9 - 0.1;\n",
     "h9=-0.5*x_1*x_11*x_8 - 0.9;\n",
     "vars=[x_0, x_1, x_2, x_3, x_4, x_5, x_6, x_7, x_8, x_9, x_10, x_11, x_12, x_13, x_14]\n",
-    "dfdx=[0, 0, 0, 0, 0, 0, 0, 0, 2x_8-2, 2x_9-2, 0, 2x_11-2, 0, 2x_13-2, 2x_14-2]\n",
-    "h=[h0, h1, h2, h3, h4, h5, h6, h7, h8, h9, x_8-1, x_9-1,x_11-1, x_13-1,x_14-1];"
+    "dfdx=[0, 0, 0, 0, 0, 0, 0, 2x_7-2, 0, 2x_9-2, 0, 0, 2x_12-2, 2x_13-2, 2x_14-2]\n",
+    "h=[h0, h1, h2, h3, h4, h5, h6, h7, h8, h9, 2x_7-2, 2x_9-2, 2x_12-2, 2x_13-2, 2x_14-2];"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 22,
    "id": "c81f1cc5-1ba3-484b-8897-4724a87ad8d9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-12T20:44:56.902000-04:00",
-     "iopub.status.busy": "2022-07-12T20:44:56.902000-04:00",
-     "iopub.status.idle": "2022-07-12T20:44:56.902000-04:00",
-     "shell.execute_reply": "2022-07-12T20:44:56.902000-04:00"
+     "iopub.execute_input": "2022-08-16T11:49:37.118000-04:00",
+     "iopub.status.busy": "2022-08-16T11:49:37.118000-04:00",
+     "iopub.status.idle": "2022-08-16T11:49:37.119000-04:00",
+     "shell.execute_reply": "2022-08-16T11:49:37.119000-04:00"
     },
     "tags": []
    },
@@ -501,14 +501,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 23,
    "id": "1f21b059-636c-4ebb-b511-383ab613d7d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-12T20:44:59.106000-04:00",
-     "iopub.status.busy": "2022-07-12T20:44:59.106000-04:00",
-     "iopub.status.idle": "2022-07-12T20:44:59.106000-04:00",
-     "shell.execute_reply": "2022-07-12T20:44:59.106000-04:00"
+     "iopub.execute_input": "2022-08-16T11:49:37.492000-04:00",
+     "iopub.status.busy": "2022-08-16T11:49:37.492000-04:00",
+     "iopub.status.idle": "2022-08-16T11:49:37.493000-04:00",
+     "shell.execute_reply": "2022-08-16T11:49:37.493000-04:00"
     },
     "tags": []
    },
@@ -519,14 +519,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 24,
    "id": "8ff44c65-b291-4db2-8a9c-13236041d667",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-12T20:44:59.570000-04:00",
-     "iopub.status.busy": "2022-07-12T20:44:59.570000-04:00",
-     "iopub.status.idle": "2022-07-12T20:44:59.570000-04:00",
-     "shell.execute_reply": "2022-07-12T20:44:59.570000-04:00"
+     "iopub.execute_input": "2022-08-16T11:49:37.698000-04:00",
+     "iopub.status.busy": "2022-08-16T11:49:37.698000-04:00",
+     "iopub.status.idle": "2022-08-16T11:49:37.699000-04:00",
+     "shell.execute_reply": "2022-08-16T11:49:37.699000-04:00"
     },
     "tags": []
    },
@@ -538,14 +538,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 25,
    "id": "ac6c18c7-8fb8-4870-8f35-2230994a5463",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-12T20:44:59.797000-04:00",
-     "iopub.status.busy": "2022-07-12T20:44:59.797000-04:00",
-     "iopub.status.idle": "2022-07-12T20:44:59.797000-04:00",
-     "shell.execute_reply": "2022-07-12T20:44:59.797000-04:00"
+     "iopub.execute_input": "2022-08-16T11:49:37.874000-04:00",
+     "iopub.status.busy": "2022-08-16T11:49:37.874000-04:00",
+     "iopub.status.idle": "2022-08-16T11:49:37.875000-04:00",
+     "shell.execute_reply": "2022-08-16T11:49:37.875000-04:00"
     },
     "tags": []
    },
@@ -560,14 +560,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 26,
    "id": "bd7dd5f3-c73f-42aa-b418-f72476be38a7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-12T20:44:59.962000-04:00",
-     "iopub.status.busy": "2022-07-12T20:44:59.962000-04:00",
-     "iopub.status.idle": "2022-07-12T20:44:59.962000-04:00",
-     "shell.execute_reply": "2022-07-12T20:44:59.962000-04:00"
+     "iopub.execute_input": "2022-08-16T11:49:38.057000-04:00",
+     "iopub.status.busy": "2022-08-16T11:49:38.057000-04:00",
+     "iopub.status.idle": "2022-08-16T11:49:38.058000-04:00",
+     "shell.execute_reply": "2022-08-16T11:49:38.058000-04:00"
     },
     "tags": []
    },
@@ -578,14 +578,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 27,
    "id": "3118d8dd-fb4a-478b-8479-96f525da9f7c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-12T20:45:00.131000-04:00",
-     "iopub.status.busy": "2022-07-12T20:45:00.131000-04:00",
-     "iopub.status.idle": "2022-07-12T20:45:00.131000-04:00",
-     "shell.execute_reply": "2022-07-12T20:45:00.131000-04:00"
+     "iopub.execute_input": "2022-08-16T11:49:38.403000-04:00",
+     "iopub.status.busy": "2022-08-16T11:49:38.403000-04:00",
+     "iopub.status.idle": "2022-08-16T11:49:38.404000-04:00",
+     "shell.execute_reply": "2022-08-16T11:49:38.404000-04:00"
     },
     "tags": []
    },
@@ -596,14 +596,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 28,
    "id": "b8356e16-e5db-4e7f-bf76-2da6c4ebefa6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-12T20:42:14.804000-04:00",
-     "iopub.status.busy": "2022-07-12T20:42:14.804000-04:00",
-     "iopub.status.idle": "2022-07-12T20:42:14.813000-04:00",
-     "shell.execute_reply": "2022-07-12T20:42:14.804000-04:00"
+     "iopub.execute_input": "2022-08-16T11:49:38.580000-04:00",
+     "iopub.status.busy": "2022-08-16T11:49:38.580000-04:00",
+     "iopub.status.idle": "2022-08-16T11:49:38.580000-04:00",
+     "shell.execute_reply": "2022-08-16T11:49:38.580000-04:00"
     },
     "tags": []
    },
@@ -614,14 +614,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 29,
    "id": "dac9c9e4-a1c0-459e-b873-84cceaee57fe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-12T20:42:25.894000-04:00",
-     "iopub.status.busy": "2022-07-12T20:42:25.894000-04:00",
-     "iopub.status.idle": "2022-07-12T20:42:25.902000-04:00",
-     "shell.execute_reply": "2022-07-12T20:42:25.902000-04:00"
+     "iopub.execute_input": "2022-08-16T11:49:38.901000-04:00",
+     "iopub.status.busy": "2022-08-16T11:49:38.901000-04:00",
+     "iopub.status.idle": "2022-08-16T11:49:38.905000-04:00",
+     "shell.execute_reply": "2022-08-16T11:49:38.904000-04:00"
     },
     "tags": []
    },
@@ -632,14 +632,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 55,
    "id": "8bf4df5a-7de0-401d-994e-fb3ac9b4ba86",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-12T20:45:03.175000-04:00",
-     "iopub.status.busy": "2022-07-12T20:45:03.175000-04:00",
-     "iopub.status.idle": "2022-07-12T20:45:03.181000-04:00",
-     "shell.execute_reply": "2022-07-12T20:45:03.175000-04:00"
+     "iopub.execute_input": "2022-08-16T13:21:55.278000-04:00",
+     "iopub.status.busy": "2022-08-16T13:21:55.277000-04:00",
+     "iopub.status.idle": "2022-08-16T13:21:55.296000-04:00",
+     "shell.execute_reply": "2022-08-16T13:21:55.296000-04:00"
     },
     "tags": []
    },
@@ -650,30 +650,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 56,
    "id": "ed45b2a6-43f9-4488-9831-cb3a42fee1f3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-12T20:45:06.794000-04:00",
-     "iopub.status.busy": "2022-07-12T20:45:06.794000-04:00",
-     "iopub.status.idle": "2022-07-12T20:45:15.754000-04:00",
-     "shell.execute_reply": "2022-07-12T20:45:15.754000-04:00"
+     "iopub.execute_input": "2022-08-16T13:21:55.716000-04:00",
+     "iopub.status.busy": "2022-08-16T13:21:55.716000-04:00",
+     "iopub.status.idle": "2022-08-16T13:21:59.907000-04:00",
+     "shell.execute_reply": "2022-08-16T13:21:59.907000-04:00"
     },
     "tags": []
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mTracking 4 paths... 100%|███████████████████████████████| Time: 0:00:02\u001b[39m\n",
+      "\u001b[34m  # paths tracked:                  4\u001b[39m\n",
+      "\u001b[34m  # non-singular solutions (real):  4 (4)\u001b[39m\n",
+      "\u001b[34m  # singular endpoints (real):      0 (0)\u001b[39m\n",
+      "\u001b[34m  # total solutions (real):         4 (4)\u001b[39m\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "Result with 2 solutions\n",
+       "Result with 4 solutions\n",
        "=======================\n",
-       "• 2 paths tracked\n",
-       "• 2 non-singular solutions (2 real)\n",
-       "• random_seed: 0xd19a26b6\n",
+       "• 4 paths tracked\n",
+       "• 4 non-singular solutions (4 real)\n",
+       "• random_seed: 0xbd8d173e\n",
        "• start_system: :polyhedral\n"
       ]
      },
-     "execution_count": 360,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,14 +695,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 57,
    "id": "cc3c861b-3edd-406b-b20f-c17c194dedb2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-12T20:45:18.803000-04:00",
-     "iopub.status.busy": "2022-07-12T20:45:18.803000-04:00",
-     "iopub.status.idle": "2022-07-12T20:45:18.803000-04:00",
-     "shell.execute_reply": "2022-07-12T20:45:18.803000-04:00"
+     "iopub.execute_input": "2022-08-16T13:22:03.144000-04:00",
+     "iopub.status.busy": "2022-08-16T13:22:03.144000-04:00",
+     "iopub.status.idle": "2022-08-16T13:22:03.145000-04:00",
+     "shell.execute_reply": "2022-08-16T13:22:03.145000-04:00"
     },
     "tags": []
    },
@@ -702,14 +713,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 58,
    "id": "8721e59d-94c2-473a-9aaa-e08e649b6ee2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-12T20:45:26.534000-04:00",
-     "iopub.status.busy": "2022-07-12T20:45:26.534000-04:00",
-     "iopub.status.idle": "2022-07-12T20:45:26.682000-04:00",
-     "shell.execute_reply": "2022-07-12T20:45:26.682000-04:00"
+     "iopub.execute_input": "2022-08-16T13:22:03.299000-04:00",
+     "iopub.status.busy": "2022-08-16T13:22:03.299000-04:00",
+     "iopub.status.idle": "2022-08-16T13:22:03.305000-04:00",
+     "shell.execute_reply": "2022-08-16T13:22:03.305000-04:00"
     },
     "tags": []
    },
@@ -717,12 +728,14 @@
     {
      "data": {
       "text/plain": [
-       "2-element Vector{Vector{Float64}}:\n",
-       " [9.044275498572112, -1.8, 4.0, 1.5, 5.919614960128627, 1.7068591866023533, -0.49361527546164685, 0.9722222222222221, 1.0, 1.0, -0.09235334150723525, 1.0, 9.624869813933593, 1.0, 1.0]\n",
-       " [-2.9482493690130473, -1.8, 4.0, 1.5, 2.2153056747920084, 3.5590138292706626, 0.4589213979106265, 0.9722222222222221, 1.0, 1.0, 0.11601405579294957, 1.0, -7.661906850970627, 1.0, 1.0]"
+       "4-element Vector{Vector{Float64}}:\n",
+       " [0.09036144578313254, 0.7649110640673518, 4.0, 1.5, -45.999999999999986, 27.66666666666666, 12.499999999999996, 1.0, 0.020905495836366465, 1.0, 0.5360617022596398, -112.56440748926092, 1.0, 1.0, 1.0]\n",
+       " [0.09036144578313259, -1.7649110640673518, 4.0, 1.5, -45.99999999999998, 27.66666666666665, 12.499999999999995, 1.0, -0.00936954663328207, 1.0, -0.8693950355929732, -108.85066894631736, 1.0, 1.0, 1.0]\n",
+       " [0.09036144578313257, 0.7649110640673518, 4.0, 1.5, -45.999999999999986, 27.666666666666657, 12.499999999999998, 1.0, -0.9176446262711492, 1.0, 0.5360617022596399, 2.5644074892609523, 1.0, 1.0, 1.0]\n",
+       " [0.0903614457831326, -1.7649110640673518, 4.0, 1.5, -45.99999999999998, 27.66666666666665, 12.499999999999995, 1.0, -0.8873695838015002, 1.0, -0.8693950355929732, -1.1493310536826005, 1.0, 1.0, 1.0]"
       ]
      },
-     "execution_count": 363,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
